resources/pacmanbkp/pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: pacman
  name: pacman-svc
spec:
  ports:
  - name: pacman
    port: 9001
    protocol: TCP
  selector:
    app: pacmand
